--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
-{sub_dirs, [
-    "rel"
-]}.
+{erl_opts, [debug_info]}.
+
+{cover_enabled, true}.
+{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
