--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,5 @@
 
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
+
+{xref_checks, [undefined_function_calls]}.
