--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,26 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [
+    debug_info,
+    warn_unused_vars,
+    warn_export_all,
+    warn_shadow_vars,
+    warn_unused_import,
+    warn_unused_function,
+    warn_bif_clash,
+    warn_unused_record,
+    warn_deprecated_function,
+    warn_obsolete_guard,
+    strict_validation,
+    warn_export_vars,
+    warn_exported_vars,
+    warn_untyped_record
+]}.
+
+{deps, [{eunit_formatters, "0.3.1"}]}.
 
 {cover_enabled, true}.
-{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
+{cover_print_enabled, true}.
+{eunit_opts, [verbose,
+              no_tty,
+              {report, {eunit_progress, [colored]}}]}.
+
+{xref_checks, [undefined_function_calls]}.
