Updating deps and CI tools

--- a/rebar.config
+++ b/rebar.config
@@ -15,12 +15,13 @@
     warn_untyped_record
 ]}.
 
-{deps, [{eunit_formatters, "0.5.0"}]}.
+{deps, [  {eunit_formatters, "0.5.0"}
+        , {covertool,        "2.0.0"}
+        ]}.
 
-{cover_enabled, true}.
-{cover_print_enabled, true}.
-{eunit_opts, [verbose,
-              no_tty,
-              {report, {eunit_progress, [colored]}}]}.
+{plugins, [covertool]}.
+{cover_export_enabled, true}.
+{covertool_eunit, {".eunit/eunit.coverdata", "eunit.coverage.xml"}}.
+{covertool_prefix_len, 2}.
 
 {xref_checks, [undefined_function_calls]}.
